# veolabserver

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/veolabserver/: main.py
src/veolabserver/database/: database_config.py  database_veolab.py
tests/: resp.json  sample.json
